Enable mongdb settings for dcentb packaged application