@@ -13,7 +13,6 @@ import org.springframework.core.io.Resource;
 import org.springframework.stereotype.Component;
 
 import java.io.IOException;
-import java.nio.file.Files;
 
 @Component
 public class RequestHandlerProvider {
@@ -21,17 +20,65 @@ public class RequestHandlerProvider {
     private PathConfigMapper pathConfigMapper;
 
     @Autowired
-    public RequestHandlerProvider(@Value("classpath:example.openapi.json") Resource resource) throws IOException {
-        this(JsonValueFactory.create(
-                new String(
-                        Files.readAllBytes(
-                                resource.getFile().toPath())
-                ))
-                .getJsonObject());
+    public RequestHandlerProvider(
+            @Value("${dcentb.openapi.file:classpath:demo.openapi.json}") Resource resource,
+            @Value("${dcentb.mongodb.connection:mongodb://admin:adminpassword@localhost:27017/?authSource=admin}") String mongodbConnectionString,
+            @Value("${dcentb.mongodb.db:}") String databaseName // TODO: This should not be default. This could be stated in the demo.openapi.json instead
+
+    ) throws IOException {
+        this(
+                JsonValueFactory.create(new String(resource.getInputStream().readAllBytes())).getJsonObject(),
+                JsonObject.EMPTY.put("connection", mongodbConnectionString).put("db", databaseName)
+        );
     }
 
     public RequestHandlerProvider(JsonObject openApiDocument) {
+        this(openApiDocument, JsonObject.EMPTY);
+    }
+
+    public RequestHandlerProvider(JsonObject openApiDocument, JsonObject mongoDbConfig) {
+        openApiDocument = applyMongodbConfig(openApiDocument, mongoDbConfig);
         pathConfigMapper = setupPathConfigMapper(openApiDocument);
+    }
+
+    private static JsonObject applyMongodbConfig(JsonObject openApiDocument, JsonObject mongoConfig) {
+
+        JsonObject globalMongoConfig = openApiDocument.get("x-dcentb", JsonObject.EMPTY).get("mongodb", JsonObject.EMPTY).getJsonObject();
+        JsonValue globalConnection = globalMongoConfig.get("connection", JsonValue.NULL);
+        JsonValue globalDb = globalMongoConfig.get("db", JsonValue.NULL);
+        String connectionString = mongoConfig.get("connection", globalConnection).getString();
+        String databaseName = mongoConfig.get("db").getString();
+        if (databaseName.isEmpty()) {
+            databaseName = globalDb.getString();
+        }
+
+        JsonObject paths = openApiDocument.get("paths").getJsonObject();
+        JsonObject updatedPaths = paths;
+        for (String path : paths.keySet()) {
+            JsonObject operations = paths.get(path).getJsonObject();
+            JsonObject updatedOperations = operations;
+            for (String method : operations.keySet()) {
+                JsonObject operation = operations.get(method).getJsonObject();
+                JsonValue xDcentb = operation.get("x-dcentb");
+                if (xDcentb != null && xDcentb.getJsonObject() != null) {
+                    JsonValue mongodb = xDcentb.getJsonObject().get("mongodb");
+                    if (mongodb != null && mongodb.getJsonObject() != null) {
+                        JsonObject updatedMongodb = mongodb.getJsonObject();
+                        if (databaseName != null) {
+                            updatedMongodb = updatedMongodb.put("db", databaseName);
+                        }if (connectionString != null) {
+                            updatedMongodb = updatedMongodb.put("connection", connectionString);
+                        }
+
+                        JsonObject updatedXDcentb = xDcentb.getJsonObject().put("mongodb", updatedMongodb.jsonValue());
+                        JsonObject updatedOperation = operation.put("x-dcentb", updatedXDcentb.jsonValue());
+                        updatedOperations = updatedOperations.put(method, updatedOperation.jsonValue());
+                    }
+                }
+            }
+            updatedPaths = updatedPaths.put(path, updatedOperations.jsonValue());
+        }
+        return openApiDocument.put("paths", updatedPaths.jsonValue());
     }
 
     private static PathConfigMapper setupPathConfigMapper(JsonObject openApiDocument) {
